update css modal

--- a/index.html
+++ b/index.html
@@ -998,16 +998,22 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="copyright">
-                  <p>
-                    Copyright © 2018 Colorlib. All rights reserved. Template
-                    by <a href="https://colorlib.com">Colorlib</a>.
-                  </p>
+            <footer class="footer navbar-fixed-bottom">
+              <div class="row mt-5 bg-black">
+                <div class="col-md-12 ">
+                  <div class="copyright ">
+                    <p>
+                      Copyright © 2020 KD. All rights reserved. <br>
+                      <span class="text-info">KD</span>
+                      <span class="text-info">S</span>istema
+                      <span class="text-info">G</span>erenciador
+
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
+
+            </footer>
           </div>
         </div>
       </div>
