--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 
 <head>
     <!-- Required meta tags-->
@@ -46,7 +46,7 @@
             <div class="container  ">
 
                 <div class="login-wrap">
-                    <div class="bg-white" style="border: black 1px solid;">
+                    <div class="bg-white" style="border: gray 1px solid;">
                         <h2 class="text-info  text-center pt-2 mb-2">LOGIN</h2>
                         <div class="login-logo bg-black">
                             <a href="#">
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="login-checkbox font-weight-bold ">
                                     <label>
-                                        <input class=" " type="checkbox" name="remember" id="form-password">Lembrar-me
+                                        <input  class="bg-white " type="checkbox" name="remember" id="form-password">Lembrar-me
                                     </label>
                                     <label>
                                         <a href="#">Esqueceu a Senha?</a>
@@ -93,7 +93,7 @@
                                 </div>
                             -->
                             </form>
-                            <div class="register-link pb-3">
+                            <div class="register-link pb-5">
                                 <h6>
                                     Não tem uma conta?
                                     <a href="register.html">Cadastre-se aqui</a>
