new modal and register form

--- a/login.html
+++ b/login.html
@@ -68,7 +68,8 @@
                                 </div>
                                 <div class="login-checkbox font-weight-bold ">
                                     <label>
-                                        <input  class="bg-white " type="checkbox" name="remember" id="form-password">Lembrar-me
+                                        <input class="bg-white " type="checkbox" name="remember"
+                                            id="form-password">Lembrar-me
                                     </label>
                                     <label>
                                         <a href="#">Esqueceu a Senha?</a>
