--- a/menu.html
+++ b/menu.html
@@ -9,8 +9,9 @@
     <nav class="navbar-sidebar">
       <ul class="list-unstyled navbar__list">
         <li class="has-sub">
-          <a class="js-arrow" href="#">
+          <a  href="index.html">
             <i class="fas fa-tachometer-alt text-white"></i>Dashboard</a>
+            <!--
           <ul class="list-unstyled navbar__sub-list js-sub-list">
             <li>
               <a href="index.html">Dashboard 1</a>
@@ -25,6 +26,7 @@
               <a href="index4.html">Dashboard 4</a>
             </li>
           </ul>
+          -->
         </li>
         <li>
           <a href="stock.html"> <i class="fas fa-box"></i>Estoque</a>
