--- a/stock.html
+++ b/stock.html
@@ -10,6 +10,7 @@
   <meta name="keywords" content="au theme template" />
   <base href="/login.html" target="_blank">
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="manifest" href="manifest.json" />
   <!-- Title Page-->
   <title>Estoque</title>
 
