--- a/vendas.html
+++ b/vendas.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Kelvin/Diogo" />
   <meta name="keywords" content="au theme template" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="manifest" href="manifest.json" />
   <!-- Title Page-->
   <title>Vendas</title>
 
