--- a/stock.html
+++ b/stock.html
@@ -16,18 +16,18 @@
 
   <!-- Fontfaces CSS-->
   <link href="css/font-face.css" rel="stylesheet" media="all" />
-  <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all" />
-  <link href="vendor/font-awesome-5/css/fontawesome-all.min.css" rel="stylesheet" media="all" />
-  <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/font-awesome-5/css/fontawesome-all.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all" />
 
   <!-- Bootstrap CSS-->
-  <link href="vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all" />
 
   <!-- Vendor CSS-->
-  <link href="vendor/animsition/animsition.min.css" rel="stylesheet" media="all" />
-  <link href="vendor/bootstrap-progressbar/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet" media="all" />
-  <link href="vendor/wow/animate.css" rel="stylesheet" media="all" />
-  <link href="vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/animsition/animsition.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/bootstrap-progressbar/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/wow/animate.css" rel="stylesheet" media="all" />
+  <link href="./vendor/css-hamburgers/hamburgers.min.css" rel="stylesheet" media="all" />
   <link href="vendor/slick/slick.css" rel="stylesheet" media="all" />
   <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all" />
   <link href="vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" media="all" />
