--- a/stock.html
+++ b/stock.html
@@ -8,20 +8,20 @@
   <meta name="description" content="au theme template" />
   <meta name="author" content="Kelvin/Diogo" />
   <meta name="keywords" content="au theme template" />
-  <base href="/login.html" target="_blank">
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="manifest" href="manifest.json" />
+
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="manifest" href="/manifest.json" />
   <!-- Title Page-->
   <title>Estoque</title>
 
   <!-- Fontfaces CSS-->
   <link href="css/font-face.css" rel="stylesheet" media="all" />
-  <link href="././vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all" />
-  <link href="././vendor/font-awesome-5/css/fontawesome-all.min.css" rel="stylesheet" media="all" />
-  <link href="././vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/font-awesome-5/css/fontawesome-all.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all" />
 
   <!-- Bootstrap CSS-->
-  <link href="././vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all" />
+  <link href="./vendor/bootstrap-4.1/bootstrap.min.css" rel="stylesheet" media="all" />
 
   <!-- Vendor CSS-->
   <link href="./vendor/animsition/animsition.min.css" rel="stylesheet" media="all" />
@@ -33,8 +33,8 @@
   <link href="./vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" media="all" />
 
   <!-- Main CSS-->
-  <link href="css/theme.css" rel="stylesheet" media="all" />
-  <link href="css/stock.css" rel="stylesheet" media="all" />
+  <link href="./css/theme.css" rel="stylesheet" media="all" />
+  <link href="./css/stock.css" rel="stylesheet" media="all" />
 
   <!-- Jquery JS-->
   <script src="./vendor/jquery-3.2.1.min.js"></script>
