--- a/calendar.html
+++ b/calendar.html
@@ -6,8 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="au theme template">
-    <meta name="author" content="Hau Nguyen">
+    <meta name="author" content="KD DEvs">
     <meta name="keywords" content="au theme template">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="manifest" href="manifest.json" />
 
     <!-- Title Page-->
     <title>Calendar</title>
