--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="au theme template" />
   <meta name="author" content="KD devs" />
   <meta name="keywords" content="au theme template" />
+  <meta name="white">
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="manifest" href="manifest.json" />
   <!-- Title Page-->
@@ -158,7 +159,7 @@
       </nav>
     </header>
     <!-- END HEADER MOBILE-->
-    <div  class="menu-html"> </div>
+    <div class="menu-html"> </div>
     <!-- MENU SIDEBAR
     <aside class="menu-sidebar d-none d-lg-block">
       <div class="logo">
