update apple icon

--- a/register.html
+++ b/register.html
@@ -34,6 +34,7 @@
 
     <!-- Main CSS-->
     <link href="css/theme.css" rel="stylesheet" media="all">
+    <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png"/>
 
 </head>
 
