--- a/stock.html
+++ b/stock.html
@@ -39,6 +39,7 @@
   <!-- Jquery JS-->
   <script src="./vendor/jquery-3.2.1.min.js"></script>
   <script src="https://www.w3schools.com/lib/w3data.js"></script>
+  <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png"/>
 </head>
 
 <body class="animsition">
