--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description" content="au theme template" />
   <meta name="author" content="KD devs" />
   <meta name="keywords" content="au theme template" />
-  <meta name="white">
+  
+  <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="manifest" href="manifest.json" />
   <!-- Title Page-->
