--- a/vendas.html
+++ b/vendas.html
@@ -30,7 +30,7 @@
   <link href="vendor/slick/slick.css" rel="stylesheet" media="all" />
   <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all" />
   <link href="vendor/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" media="all" />
-
+  <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png"/>
   <!-- Main CSS-->
   <link href="css/theme.css" rel="stylesheet" media="all" />
   <link href="css/vendas.css" rel="stylesheet" media="all" />
