init balcao de vendas

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="container-fluid ">
           <div class="header-mobile-inner">
             <a class="logo" href="index.html">
-              <img src="images/kd_sistema_blue.png" alt="KD Gerenciador" style="width: 200px; height: auto;" />
+              <img src=".images/kd_sistema_blue.png" alt="KD Gerenciador" style="width: 200px; height: auto;" />
             </a>
             <button class="hamburger hamburger--slider" type="button">
               <span class="hamburger-box">
