--- a/stock.html
+++ b/stock.html
@@ -47,10 +47,10 @@
     <!-- HEADER MOBILE-->
     <header class="header-mobile d-block d-lg-none">
       <div class="header-mobile__bar bg-black">
-        <div class="container-fluid">
+        <div class="container-fluid ">
           <div class="header-mobile-inner">
             <a class="logo" href="index.html">
-              <img src="./images/kd_sistema_blue.png" style="width: 75%;" alt="KD Sistema">
+              <img src="./images/kd_sistema_blue.png" alt="KD Gerenciador" style="width: 200px; height: auto;" />
             </a>
             <button class="hamburger hamburger--slider" type="button">
               <span class="hamburger-box">
@@ -62,106 +62,31 @@
       </div>
       <nav class="navbar-mobile text-white">
         <div class="container-fluid">
-          <ul class="navbar-mobile__list list-unstyled  bg-black">
+          <ul class="navbar-mobile__list list-unstyled">
             <li class="has-sub">
-              <a class="js-arrow text-white" href="#">
+              <a href="index.html" class=" text-white">
                 <i class="fas fa-tachometer-alt"></i>Dashboard</a>
-              <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-
-                <li>
-                  <a class="text-white" href="index.html">Dashboard 1</a>
-                </li>
-                <li>
-                  <a class="text-white" href="index2.html">Dashboard 2</a>
-                </li>
-                <li>
-                  <a class="text-white" href="index3.html">Dashboard 3</a>
-                </li>
-                <li>
-                  <a class="text-white" href="index4.html">Dashboard 4</a>
-                </li>
-                <li>
-
-                </li>
-              </ul>
             </li>
             <li>
-              <a class="text-white " href="stock.html"> <i class="fas fa-box"></i> Estoque</a>
+              <a href="stock.html" class=" text-white"> <i class="fas fa-box"></i>Estoque</a>
+            </li>
+            <li n>
+              <a href="vendas.html" class=" text-white"><i class="fas fa-money-bill-alt"></i>Vendas
+              </a>
             </li>
             <li>
-              <a class="text-white" href="chart.html"> <i class="fas fa-chart-bar"></i>Graficos</a>
+              <a href="chart.html" class=" text-white"> <i class="fas fa-chart-bar"></i>Gráficos</a>
             </li>
             <li>
-              <a class="text-white" href="table.html"> <i class="fas fa-table"></i>Tabelas</a>
+              <a href="table.html" class=" text-white"> <i class="fas fa-table"></i>Tabelas</a>
             </li>
             <li>
-              <a class="text-white" href="form.html">
-                <i class="far fa-check-square"></i>Formulario</a>
+              <a href="form.html" class=" text-white">
+                <i class="far fa-check-square"></i>Formulários</a>
             </li>
             <li>
-              <a class="text-white" href="calendar.html">
+              <a href="calendar.html" class=" text-white">
                 <i class="fas fa-calendar-alt"></i>Calendario</a>
-            </li>
-            <li>
-              <a href="map.html">
-                <i class="fas fa-map-marker-alt"></i>Mapa</a>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-copy"></i>Paginas</a>
-              <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-                <li>
-                  <a href="produtos.html">Produtos</a>
-                </li>
-                <li>
-                  <a href="login.html">Login</a>
-                </li>
-                <li>
-                  <a href="register.html">Register</a>
-                </li>
-                <li>
-                  <a href="forget-pass.html">Forget Password</a>
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-desktop"></i>UI Elements</a>
-              <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-                <li>
-                  <a href="button.html">Button</a>
-                </li>
-                <li>
-                  <a href="badge.html">Badges</a>
-                </li>
-                <li>
-                  <a href="tab.html">Tabs</a>
-                </li>
-                <li>
-                  <a href="card.html">Cards</a>
-                </li>
-                <li>
-                  <a href="alert.html">Alerts</a>
-                </li>
-                <li>
-                  <a href="progress-bar.html">Progress Bars</a>
-                </li>
-                <li>
-                  <a href="modal.html">Modals</a>
-                </li>
-                <li>
-                  <a href="switch.html">Switchs</a>
-                </li>
-                <li>
-                  <a href="grid.html">Grids</a>
-                </li>
-                <li>
-                  <a href="fontawesome.html">Fontawesome Icon</a>
-                </li>
-                <li>
-                  <a href="typo.html">Typography</a>
-                </li>
-              </ul>
             </li>
           </ul>
         </div>
