--- a/vendas.html
+++ b/vendas.html
@@ -42,9 +42,9 @@
 <body class="animsition">
   <div class="page-wrapper">
     <!-- HEADER MOBILE-->
-    <header class="header-mobile d-block d-lg-none ">
+    <header class="header-mobile d-block d-lg-none">
       <div class="header-mobile__bar bg-black">
-        <div class="container-fluid">
+        <div class="container-fluid ">
           <div class="header-mobile-inner">
             <a class="logo" href="index.html">
               <img src="./images/kd_sistema_blue.png" alt="KD Gerenciador" style="width: 200px; height: auto;" />
@@ -61,101 +61,29 @@
         <div class="container-fluid">
           <ul class="navbar-mobile__list list-unstyled">
             <li class="has-sub">
-              <a class="js-arrow" href="#">
+              <a href="index.html" class=" text-white">
                 <i class="fas fa-tachometer-alt"></i>Dashboard</a>
-              <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-
-                <li>
-                  <a href="index.html">Dashboard 1</a>
-                </li>
-                <li>
-                  <a href="index2.html">Dashboard 2</a>
-                </li>
-                <li>
-                  <a href="index3.html">Dashboard 3</a>
-                </li>
-                <li>
-                  <a href="index4.html">Dashboard 4</a>
-                </li>
-                <li>
-
-                </li>
-              </ul>
             </li>
             <li>
-              <a href="chart.html"> <i class="fas fa-chart-bar"></i>Charts</a>
+              <a href="stock.html" class=" text-white"> <i class="fas fa-box"></i>Estoque</a>
+            </li>
+            <li n>
+              <a href="vendas.html" class=" text-white"><i class="fas fa-money-bill-alt"></i>Vendas
+              </a>
             </li>
             <li>
-              <a href="table.html"> <i class="fas fa-table"></i>Tables</a>
+              <a href="chart.html" class=" text-white"> <i class="fas fa-chart-bar"></i>Gráficos</a>
             </li>
             <li>
-              <a href="form.html">
-                <i class="far fa-check-square"></i>Forms</a>
+              <a href="table.html" class=" text-white"> <i class="fas fa-table"></i>Tabelas</a>
             </li>
             <li>
-              <a href="calendar.html">
-                <i class="fas fa-calendar-alt"></i>Calendar</a>
+              <a href="form.html" class=" text-white">
+                <i class="far fa-check-square"></i>Formulários</a>
             </li>
             <li>
-              <a href="map.html">
-                <i class="fas fa-map-marker-alt"></i>Maps</a>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-copy"></i>Pages</a>
-              <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-                <li>
-                  <a href="produtos.html">Produtos</a>
-                </li>
-                <li>
-                  <a href="login.html">Login</a>
-                </li>
-                <li>
-                  <a href="register.html">Register</a>
-                </li>
-                <li>
-                  <a href="forget-pass.html">Forget Password</a>
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-desktop"></i>UI Elements</a>
-              <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-                <li>
-                  <a href="button.html">Button</a>
-                </li>
-                <li>
-                  <a href="badge.html">Badges</a>
-                </li>
-                <li>
-                  <a href="tab.html">Tabs</a>
-                </li>
-                <li>
-                  <a href="card.html">Cards</a>
-                </li>
-                <li>
-                  <a href="alert.html">Alerts</a>
-                </li>
-                <li>
-                  <a href="progress-bar.html">Progress Bars</a>
-                </li>
-                <li>
-                  <a href="modal.html">Modals</a>
-                </li>
-                <li>
-                  <a href="switch.html">Switchs</a>
-                </li>
-                <li>
-                  <a href="grid.html">Grids</a>
-                </li>
-                <li>
-                  <a href="fontawesome.html">Fontawesome Icon</a>
-                </li>
-                <li>
-                  <a href="typo.html">Typography</a>
-                </li>
-              </ul>
+              <a href="calendar.html" class=" text-white">
+                <i class="fas fa-calendar-alt"></i>Calendario</a>
             </li>
           </ul>
         </div>
@@ -163,120 +91,8 @@
     </header>
     <!-- END HEADER MOBILE-->
 
-    <!-- MENU SIDEBAR
-    <aside class="menu-sidebar d-none d-lg-block">
-      <div class="logo">
-        <a href="#">
-          <img src="./images/icone_kd.png" alt="KD Sistema">
-        </a>
-      </div>
-      <div class="menu-sidebar__content js-scrollbar1 text-white">
-        <nav class="navbar-sidebar">
-          <ul class="list-unstyled navbar__list">
-            <li class="active has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-tachometer-alt text-white"></i>Dashboard</a>
-              <ul class="list-unstyled navbar__sub-list js-sub-list">
-                <li>
-                  <a href="index.html">Dashboard 1</a>
-                </li>
-                <li>
-                  <a href="index2.html">Dashboard 2</a>
-                </li>
-                <li>
-                  <a href="index3.html">Dashboard 3</a>
-                </li>
-                <li>
-                  <a href="index4.html">Dashboard 4</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="stock.html"> <i class="fas fa-box"></i>Estoque</a>
-            </li>
-            <li>
-              <a href="chart.html"> <i class="fas fa-chart-bar"></i>Charts</a>
-            </li>
-            <li>
-              <a href="table.html"> <i class="fas fa-table"></i>Tables</a>
-            </li>
-            <li>
-              <a href="form.html">
-                <i class="far fa-check-square"></i>Forms</a>
-            </li>
-            <li>
-              <a href="calendar.html">
-                <i class="fas fa-calendar-alt"></i>Calendar</a>
-            </li>
-            <li>
-              <a href="map.html">
-                <i class="fas fa-map-marker-alt"></i>Maps</a>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-copy"></i>Pages</a>
-              <ul class="list-unstyled navbar__sub-list js-sub-list">
-                <li>
-                  <a href="produtos.html">Produtos</a>
-                </li>
-                <li>
-                  <a href="login.html">Login</a>
-                </li>
-                <li>
-                  <a href="produtos.html">Produtos</a>
-                </li>
-                <li>
-                  <a href="register.html">Register</a>
-                </li>
-                <li>
-                  <a href="forget-pass.html">Forget Password</a>
-                </li>
-              </ul>
-            </li>
-            <li class="has-sub">
-              <a class="js-arrow" href="#">
-                <i class="fas fa-desktop"></i>UI Elements</a>
-              <ul class="list-unstyled navbar__sub-list js-sub-list">
-                <li>
-                  <a href="button.html">Button</a>
-                </li>
-                <li>
-                  <a href="badge.html">Badges</a>
-                </li>
-                <li>
-                  <a href="tab.html">Tabs</a>
-                </li>
-                <li>
-                  <a href="card.html">Cards</a>
-                </li>
-                <li>
-                  <a href="alert.html">Alerts</a>
-                </li>
-                <li>
-                  <a href="progress-bar.html">Progress Bars</a>
-                </li>
-                <li>
-                  <a href="modal.html">Modals</a>
-                </li>
-                <li>
-                  <a href="switch.html">Switchs</a>
-                </li>
-                <li>
-                  <a href="grid.html">Grids</a>
-                </li>
-                <li>
-                  <a href="fontawesome.html">Fontawesome Icon</a>
-                </li>
-                <li>
-                  <a href="typo.html">Typography</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </aside>
-    END MENU SIDEBAR-->
+
+    <!-- MENU SIDEBAR-->
     <div class="menu-html"></div>
     <!-- PAGE CONTAINER-->
     <div class="page-container">
