--- a/vendas.html
+++ b/vendas.html
@@ -34,7 +34,7 @@
   <!-- Main CSS-->
   <link href="css/theme.css" rel="stylesheet" media="all" />
   <link href="css/vendas.css" rel="stylesheet" media="all" />
-
+  <link rel="stylesheet" href="./css/bootstrap.table-editor.css">
   <!-- Jquery JS-->
   <script src="vendor/jquery-3.2.1.min.js"></script>
 </head>
@@ -286,7 +286,7 @@
                 <form action="" method="post">
                   <div class="balcao-form pt-2" style="border: 1px solid grey;">
                     <div class="table-responsive table-responsive-data2">
-                      <table class="table table-data2 ml-3 mt-4  bg-secondary table-hover">
+                      <table class="table table-data2 ml-3 mt-4  bg-secondary table-hover" id="Tabela_vendas">
                         <thead>
                           <div class="row ">
                             <tr class="text-center text-white">
@@ -299,13 +299,18 @@
                               <th></th>
                             </tr>
                           </div>
-                          <div class="row justify-content-center offset-md-7  ">
-                            <div class="form-group col-md-4   col-5 text-center">
+                          <div class="row justify-content-center  ">
+                            <div class="form-group col-md-2 ml-2">
+                              <p class="btn btn-secondary">
+                                Finalizar Dia
+                              </p>
+                            </div>
+                            <div class="form-group col-md-2  offset-md-5  col-5 text-center">
 
                               <input class="au-input au-input--full bg-white text-center " type="text" name="data"
                                 placeholder="Data" disabled id="Data_vendas">
                             </div>
-                            <div class="form-group   text-center col-5 col-md-3">
+                            <div class="form-group   text-center col-5 col-md-2">
                               <input class="au-input au-input--full bg-white text-center  " type="number"
                                 name="numero_pedido" placeholder="00001" disabled>
                             </div>
@@ -373,45 +378,47 @@
                               </div>
 
 
-                              
-                              <div class="form-group col-md-2 text-center col-6">
-                                <label>$ Unitário</label>
 
-                                <select class="form-control bg-white  seta" name="" id="Valor_vendas" disabled>
+                              <div class="form-group col-md-2 text-center col-6">
+                                <label>R$ Unitário</label>
+
+                                <select class="form-control bg-white  seta text-center" name="" id="Valor_vendas"
+                                  disabled>
                                   <option value=""></option>
                                 </select>
                               </div>
-                              <div class="form-group col-md-2 col-6">
+                              <div class="form-group col-md-2 col-6 text-center">
                                 <label>Quantidade</label>
                                 <input class="au-input au-input--full text-center" type="number" name="quantidade"
                                   id="Quantidade_vendas" placeholder="Qtd" value="1" min="1">
                               </div>
-                              <div class="form-group col-md-3">
+                              <div class="form-group col-md-3 text-center">
                                 <label>Sub Total</label>
-                                <input class="au-input au-input--full bg-white" type="text" name="sub_total" disabled
-                                  id="Subtotal_vendas">
+                                <input class="au-input au-input--full bg-white text-center" type="text" name="sub_total"
+                                  disabled id="Subtotal_vendas">
                               </div>
 
+                              <!--Tabela-->
                               <tbody class="text-center text-dark font-weight-bold" id="TabelaComanda">
 
                               </tbody>
                       </table>
                     </div>
 
-                    <div class="row justify-content-center mt-3 text-cente mr-1">
+                    <div class="row justify-content-center mt-3 text-center mr-1">
                       <div class="offset-md-7 col-md-2 col-5">
-                        <label for="">Quant. Produtos</label>
-                        <input class="au-input au-input--full bg-white  text-center" type="text" name="total_produtos"
-                          placeholder="Total Produtos" disabled id="Quantidade_total">
+                        <label for="">Total Produtos</label>
+                        <input class="au-input au-input--full bg-white  text-center font_vendas" type="text" name="total_produtos"
+                          placeholder="T. Produtos" disabled id="Quantidade_total" style="border: 1px green solid;">
                       </div>
-                      <div class=" col-md-3 text-center col-5 " >
+                      <div class=" col-md-3 text-center col-5 ">
                         <label for="">Total da Venda</label>
-                        <input class="au-input au-input--full bg-white  text-center " type="text" name="total_geral"
+                        <input class="au-input au-input--full bg-white  text-center font_vendas " type="text" name="total_geral"
                           placeholder="Total Geral" disabled id="Total_vendas" style="border: 1px green solid;">
                       </div>
 
                     </div>
-                    <div class="form-group row justify-content-center text-center mt-4">
+                    <div class="form-group row justify-content-center text-center mt-4 ">
                       <button type="button" class="btn btn-danger  col-5 mr-3 col-md-2">Cancelar Pedido</button>
                       <button type="button" class="btn btn-success col-5 col-md-2">Concluir Pedido</button>
 
@@ -465,6 +472,17 @@
   <script src="vendor/select2/select2.min.js"></script>
   <script src="js/allpages.js"> </script>
   <script src="js/vendas.js"> </script>
+  <script src="./js/bootstrap.table-editor.js"></script>
+  <script src="./js/bootstable.js"></script>
+  <script type="text/javascript">
+    $('#Tabela_vendas').SetEditable({
+
+      columnsEd: "2,4"
+
+    });
+
+
+  </script>
   <!-- Main JS-->
   <script src="js/main.js"></script>
 
