--- a/vendas.html
+++ b/vendas.html
@@ -420,7 +420,7 @@
                           value="00" disabled id="Quantidade_total" style="border: 1px green solid;">
                       </div>
                       <div class=" col-md-2 text-center col-5 ">
-                        <label for="">Total da Venda</label>
+                        <label for="">Total Venda</label>
                         <input class="au-input au-input--full bg-white  text-center font_vendas " type="text" name="total_geral"
                           value="0.00" disabled id="Total_vendas" style="border: 1px green solid;">
                       </div>
