--- a/vendas.html
+++ b/vendas.html
@@ -319,8 +319,9 @@
                             </div>
                             <div class="form-group text-center col-5 col-md-2 ">
                               <label for=""> Pedido</label>
-                              <input class="au-input au-input--full bg-white text-center top-balcao" type="number"
-                                name="numero_pedido" value="0001" disabled style="border: 1px solid rgb(255, 115, 0);">
+                              <input class="au-input au-input--full  text-center top-balcao" type="number"
+                                name="numero_pedido" value="0001" disabled 
+                                style="border: 1px solid rgb(21, 255, 0); background-color: gold;">
                             </div>
                           </div>
                         </thead>
@@ -344,8 +345,8 @@
                                 </p>
 
                               </div>
-                              <div class="pt-5 text-center col-12 col-md-5 ">
-
+                              <div class=" text-center col-12 col-md-5 ">
+                                <label for="">Tipo</label><br>
                                 <div class="form-check  form-check-inline  text-center">
                                   <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
                                     value="1" checked>
