--- a/vendas.html
+++ b/vendas.html
@@ -108,9 +108,14 @@
                   <i class="zmdi zmdi-search"></i>
                 </button>
               </form>
+              <div class="col-md-2 bg-success">
+                <p class="text-white text-center">Balcão Aberto</p>
+
+              </div>
               <div class="header-button">
 
                 <div class="noti-wrap">
+
                   <!--
                      <div class="noti__item js-item-menu">
                     <i class="zmdi zmdi-comment-more"></i>
@@ -223,6 +228,7 @@
                     </div>
                  
                   </div>
+
                   -->
 
 
@@ -291,7 +297,7 @@
 
                 </div>
                 <form action="" method="post" id="Form_vendas">
-                  <div class="balcao-form pt-2" style="border: 1px solid grey;">
+                  <div class="balcao-form" style="border: 1px solid grey;">
                     <div class="table-responsive table-responsive-data2">
                       <table class="table table-data2 ml-3 mt-4  bg-secondary table-hover" id="Tabela_vendas">
                         <thead>
@@ -306,9 +312,10 @@
                             </tr>
                           </div>
                           <div class="row justify-content-center  ">
-                            <div class="form-group col-md-2 ml-2">
-                              <p class="btn btn-secondary">
-                                Finalizar Dia
+                            <div class=" col-md-2 mt-3 ">
+
+                              <p class="btn btn-secondary align-middle ">
+                                Fechar Balcão
                               </p>
                             </div>
                             <div class="form-group col-md-2 offset-md-5 col-5 text-center">
@@ -320,7 +327,7 @@
                             <div class="form-group text-center col-5 col-md-2 ">
                               <label for=""> Pedido</label>
                               <input class="au-input au-input--full  text-center top-balcao" type="number"
-                                name="numero_pedido" value="0001" disabled
+                                name="numero_pedido" value="0000" disabled id="Numero_pedido"
                                 style="border: 1px solid rgb(0, 0, 0); background-color: gold;">
                             </div>
                           </div>
@@ -408,9 +415,9 @@
                               </tbody>
                       </table>
                     </div>
-
-                    <div class="row justify-content-center text-center mt-3">
-                      <!--
+                    <div style="border: 1px grey solid;">
+                      <div class="row justify-content-center text-center mt-3">
+                        <!--
                       <div class="offset-md-7 col-md-2 ">
                         <label for="" class="text-center">Pagamento</label>
                         <div class="form-check ml-2">
@@ -427,27 +434,28 @@
                         </div>
                       </div>
                       -->
-                      <div class="form-group offset-md-9 col-md-2 col-6 text-center">
-                        <label>Desconto</label>
-                        <input class="au-input au-input--full text-center font_vendas" type="text" name="desconto"
-                          id="Desconto_vendas" placeholder="0.00" min="0" style="border: 1px green solid;">
+                        <div class="form-group offset-md-9 col-md-2 col-6 text-center">
+                          <label>Desconto</label>
+                          <input class="au-input au-input--full text-center font_vendas" type="text" name="desconto"
+                            id="Desconto_vendas" placeholder="0.00" min="0" style="border: 1px green solid;">
+                        </div>
+                      </div>
+                      <div class="row justify-content-center  text-center ">
+                        <div class="form-group offset-md-7 col-md-2 col-5">
+                          <label for="">Total Produtos</label>
+                          <input class="au-input au-input--full bg-white  text-center font_vendas" type="text"
+                            name="total_produtos" value="00" disabled id="Quantidade_total"
+                            style="border: 1px green solid;">
+                        </div>
+                        <div class=" col-md-2 text-center col-5 ">
+                          <label for="">Total Venda</label>
+                          <input class="form-group au-input au-input--full bg-white  text-center font_vendas "
+                            type="text" name="total_geral" value="0.00" disabled id="Total_vendas"
+                            style="border: 1px green solid;">
+                        </div>
+
                       </div>
                     </div>
-                    <div class="row justify-content-center  text-center ">
-                      <div class="form-group offset-md-7 col-md-2 col-5">
-                        <label for="">Total Produtos</label>
-                        <input class="au-input au-input--full bg-white  text-center font_vendas" type="text"
-                          name="total_produtos" value="00" disabled id="Quantidade_total"
-                          style="border: 1px green solid;">
-                      </div>
-                      <div class=" col-md-2 text-center col-5 ">
-                        <label for="">Total Venda</label>
-                        <input class="form-group au-input au-input--full bg-white  text-center font_vendas " type="text"
-                          name="total_geral" value="0.00" disabled id="Total_vendas" style="border: 1px green solid;">
-                      </div>
-
-                    </div>
-
                     <div class="form-group row justify-content-center text-center mt-5 ">
                       <button type="button" class="btn btn-danger  col-5  col-md-2">
                         <i class="fas fa-times"></i>
