--- a/login.html
+++ b/login.html
@@ -5,9 +5,9 @@
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="au theme template">
+    <meta name="description" content="Sistema de Gerenciamento">
     <meta name="author" content="KD devs" />
-    <meta name="keywords" content="au theme template">
+    <meta name="keywords" content=" theme template">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
     <!-- Title Page-->
